creating browse property section

--- a/public/locales/bn/translation.json
+++ b/public/locales/bn/translation.json
@@ -119,6 +119,65 @@
       "description": "আচ্ছাদিত, খোলা পার্কিং",
       "count": "৩৫০+ সম্পত্তি"
     }
+  },
+  
+  "services": {
+    "mainTitle": "খুঁজুন। কিনুন। বিক্রি করুন। ভাড়া দিন। সব এক জায়গায়।",
+    "subTitle": "আমরা আপনার প্রয়োজন অনুযায়ী সম্পত্তি সেবার বিস্তৃত পরিসর প্রদান করি। আপনি কিনতে, বিক্রি করতে, ভাড়া নিতে, লিজ নিতে বা সম্পত্তি অর্থায়ন করতে চাইলে আমরা সাহায্য করতে প্রস্তুত।",
+    "buy": {
+      "title": "সম্পত্তি কিনুন",
+      "description": "আপনার প্রয়োজন অনুযায়ী হাজারো তালিকা থেকে আপনার স্বপ্নের বাড়ি খুঁজে নিন।",
+      "cta": "কেনা শুরু করুন"
+    },
+    "sell": {
+      "title": "সম্পত্তি বিক্রি করুন",
+      "description": "আমাদের সাথে আপনার সম্পত্তি তালিকাভুক্ত করুন এবং দ্রুত লক্ষাধিক সম্ভাব্য ক্রেতার কাছে পৌঁছান।",
+      "cta": "বিক্রি শুরু করুন"
+    },
+    "rent": {
+      "title": "সম্পত্তি ভাড়া নিন",
+      "description": "আপনার পছন্দের এলাকায় উপলব্ধ ভাড়ার বাড়ি ও অ্যাপার্টমেন্ট ব্রাউজ করুন।",
+      "cta": "ভাড়া দেখুন"
+    },
+    "lease": {
+      "title": "সম্পত্তি লিজ নিন",
+      "description": "আবাসিক এবং বাণিজ্যিক সম্পত্তির জন্য নমনীয় লিজিং অপশন।",
+      "cta": "আরও জানুন"
+    },
+    "mortgage": {
+      "title": "মর্টগেজ সেবা",
+      "description": "আপনার স্বপ্নের সম্পত্তির জন্য বিশেষজ্ঞ পরামর্শ এবং প্রতিযোগিতামূলক হার পান।",
+      "cta": "মর্টগেজ সহায়তা নিন"
+    }
+  },
+  
+  "featured": {
+    "title": "বাছাইকৃত সম্পত্তি",
+    "subtitle": "বাংলাদেশের প্রধান এলাকাগুলোর প্রিমিয়াম সম্পত্তির আমাদের বাছাইকৃত তালিকা দেখুন",
+    "moreBtn": "আরও সম্পত্তি",
+    "viewDetails": "বিস্তারিত দেখুন",
+    "status": {
+      "forSale": "বিক্রয়ের জন্য",
+      "forRent": "ভাড়ার জন্য"
+    },
+    "titles": {
+      "modernFamilyHome": "আধুনিক পারিবারিক বাড়ি",
+      "luxuryVilla": "সুইমিং পুলসহ বিলাসবহুল ভিলা"
+    },
+    "locations": {
+      "dhanmondi": "ধানমন্ডি, ঢাকা",
+      "gulshan": "গুলশান, ঢাকা"
+    },
+    "agents": {
+      "johnDoe": "জন ডো",
+      "janeSmith": "জেন স্মিথ"
+    },
+    "alert": {
+      "share": "শেয়ার ক্লিক করা হয়েছে, প্রপার্টি আইডি: {{id}}"
+    }
   }
 }
+
+
+
 
