updating navabar design and submenu design

--- a/public/locales/bn/translation.json
+++ b/public/locales/bn/translation.json
@@ -35,6 +35,7 @@
   "Home Selling Guide": "বাড়ি বিক্রয়ের গাইড",
   "Pricing Strategies": "মূল্য নির্ধারণ কৌশল",
   "Lease": "লিজ",
+  "About Us": "আমরা কারা",
   "Lease your home": "আপনার বাড়ি লিজ করুন",
   "Lease your property": "আপনার সম্পত্তি লিজ করুন",
   "Get Mortgage": "ঋণ পান",
