--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -35,6 +35,7 @@
   "Home Selling Guide": "Home Selling Guide",
   "Pricing Strategies": "Pricing Strategies",
   "Lease": "Lease",
+  "About Us": "About Us",
   "Lease your home": "Lease your home",
   "Lease your property": "Lease your property",
   "Get Mortgage": "Get Mortgage",
