updating hero section design and adding labels

--- a/public/locales/bn/translation.json
+++ b/public/locales/bn/translation.json
@@ -29,6 +29,7 @@
   "Affordability calculator": "ক্ষমতা হিসাব যন্ত্র",
   "Rent Guide": "ভাড়া গাইড",
   "Sell": "বিক্রয় করুন",
+  "Home": "হোম",
   "Sell your home": "আপনার বাড়ি বিক্রয় করুন",
   "Home value": "বাড়ির মূল্য",
   "Local experts": "স্থানীয় বিশেষজ্ঞরা",
