--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -31,6 +31,7 @@
   "Sell": "Sell",
   "Sell your home": "Sell your home",
   "Home value": "Home value",
+  "Home": "Home",
   "Local experts": "Local experts",
   "Home Selling Guide": "Home Selling Guide",
   "Pricing Strategies": "Pricing Strategies",
