--- a/public/locales/bn/translation.json
+++ b/public/locales/bn/translation.json
@@ -23,7 +23,7 @@
   "Inbox": "ইনবক্স",
   "Contacted rentals": "যোগাযোগ করা ভাড়া",
   "Applications": "আবেদনসমূহ",
-  "Rent with NestifyBD": "নেস্টিফাইবিডি সঙ্গে ভাড়া",
+  "Rent with EstateAgent": "নেস্টিফাইবিডি সঙ্গে ভাড়া",
   "Build your credit": "আপনার ক্রেডিট তৈরি করুন",
   "Renters insurance": "ভাড়াটিয়াদের বীমা",
   "Affordability calculator": "ক্ষমতা হিসাব যন্ত্র",
